<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical"
      android:paddingStart="16dp"
      android:paddingEnd="16dp"
      android:paddingTop="16dp"
      android:paddingBottom="16dp">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

      <ImageView
          android:layout_width="90dp"
          android:layout_height="90dp"
          android:src="@drawable/main_green_box"
          android:contentDescription="@string/main_green_box_background" />

      <ImageView
          android:layout_width="90dp"
          android:layout_height="90dp"
          android:scaleType="fitXY"
          android:src="@drawable/icon_image1"
          android:contentDescription="@string/icon_layered_on_top_of_the_box"/>
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/email_login_text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:hint="@string/login_email"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:minHeight="54dp"
        android:background="@drawable/edit_text_rounded1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="24dp"
        android:text="@string/password_login_text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:hint="@string/login_password"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:padding="12dp"
        android:minHeight="54dp"
        android:background="@drawable/edit_text_rounded1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="24dp"
        android:text="@string/confirm_password"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/register_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:hint="@string/re_enter_password"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:padding="12dp"
        android:minHeight="54dp"
        android:background="@drawable/edit_text_rounded1" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/register_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:backgroundTint="@color/main_green"
        />
    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="Have an account? Login"
        android:textSize="16sp" />

  </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>