<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CreateWallet1">

    <FrameLayout
    android:id="@+id/main_green_box"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/main_green_box"
        android:contentDescription="@string/main_green_box_background" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon_image1"
        android:contentDescription="@string/icon_layered_on_top_of_the_box"/>
    </FrameLayout>

    <TextView
    android:id="@+id/create_a_new_wallet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    app:layout_constraintTop_toBottomOf="@id/main_green_box"
    android:gravity="center"
    android:text="@string/create_a_new_wallet"
    android:textStyle="bold"
    android:textSize="24sp" />

    <TextView
    android:id="@+id/wallet_name_input_box"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    app:layout_constraintTop_toBottomOf="@id/create_a_new_wallet"
    android:text="@string/wallet_name_input_box"
    android:textSize="16sp"/>

    <EditText
    android:id="@+id/wallet_name_input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:autofillHints="emailAddress"
    android:hint="@string/enter_a_wallet_name_input"
    android:textSize="16sp"
    android:inputType="textEmailAddress"
    android:padding="8dp"
    android:minHeight="54dp"
    android:background="@drawable/edit_text_rounded1"
    app:layout_constraintTop_toBottomOf="@id/wallet_name_input_box"
        />

    <Button
    android:id="@+id/next_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="32dp"
    android:text="@string/next_button_text"
        android:textColor="@color/white"
        android:textSize="16sp"
    android:textStyle="bold"
        android:background="@drawable/button_rounded"
        app:backgroundTint="@color/main_green"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
